# matchy

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py
matchy/: aux_functions.py  cli.py  helper_functions.py  matching_functions.py  pretty_print.py
matchy/matching_algorithms/: base_matching_class.py  do_nothing.py  hill_climbing.py  random_hill.py  random_search.py
tests/: test_matchy.py
